--- a/package.json
+++ b/package.json
@@ -21,20 +21,24 @@
   },
   "homepage": "https://github.com/romebell/express-authentication#readme",
   "dependencies": {
-    "axios": "^0.21.0",
+    "axios": "^0.21.1",
     "bcrypt": "^5.0.1",
+    "body-parser": "^1.19.0",
     "connect-flash": "^0.1.1",
     "dotenv": "^8.2.0",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
     "express-ejs-layouts": "^2.5.0",
     "express-session": "^1.17.1",
+    "fs": "^0.0.1-security",
     "method-override": "^3.0.0",
     "morgan": "^1.10.0",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "pg": "^8.5.1",
-    "sequelize": "^6.3.5"
+    "sequelize": "^6.3.5",
+    "spotify-web-api-js": "^1.5.1",
+    "spotify-web-api-node": "^5.0.2"
   },
   "devDependencies": {
     "chai": "^4.2.0",
