--- a/config/config.json
+++ b/config/config.json
@@ -2,22 +2,19 @@
   "development": {
     "username": "postgres",
     "password": "jw123456",
-    "database": "fluffy-dollop",
+    "database": "express_auth_dev",
     "host": "127.0.0.1",
     "dialect": "postgres"
   },
   "test": {
     "username": "postgres",
     "password": "jw123456",
-    "database": "fluffy-dollop_test",
+    "database": "express_auth_test",
     "host": "127.0.0.1",
     "dialect": "postgres"
   },
   "production": {
-    "username": "postgres",
-    "password": "jw123456",
-    "database": "fluffy-dollop_production",
-    "host": "127.0.0.1",
+    "use_env_variable": "DATABASE_URL",
     "dialect": "postgres"
   }
 }
