--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "passport-local": "^1.0.0",
     "pg": "^8.5.1",
     "sequelize": "^6.3.5",
+    "sequelize-cli": "^6.2.0",
     "spotify-web-api-js": "^1.5.1",
     "spotify-web-api-node": "^5.0.2"
   },
